# PydaptiveFiltering

./: .gitignore  LICENSE  LICENSE.md  LRLS_pos.m  QR_RLS.m  README.md  TODO  TODO.md  example_channelEQ_Affine_projectionCM.m  inspect_filters.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
benchmarks/: benchmark_equalization.py  results_equalization.csv  visual.py
docs/: index.html  search.js
examples/: Untitled.ipynb
examples/Jupyter Notebooks/: Kalman.ipynb  LMS-example.ipynb  StabFastRLS.ipynb  VolterraLMS.ipynb
examples/LMS based algorithms/: LMS-example.ipynb  example_system_LMS .py  example_system_NLMS.py
pydaptivefiltering/: LMS.py  RLS.py  __init__.py  base.py  main.py
pydaptivefiltering/BlindFilters/: Affine_Projection.py  CMA.py  Godard.py  Sato.py  __init__.py
pydaptivefiltering/Blind_Filters/: Affine_projection.py  __init__.py
pydaptivefiltering/Fast_Transversal_RLS/: Fast_RLS.py  Stab_Fast_RLS.py  __init__.py
pydaptivefiltering/Fast_Tranversal_RLS_Algorithms/: Stab_Fast_RLS.py
pydaptivefiltering/IIR_Filters/: ErrorEquation.py  GaussNewton.py  GaussNewton_GradientBased.py  RLS_IIR.py  Steiglitz_McBride.py  __init__.py
pydaptivefiltering/LMS/: AP.py  AffineProjection.py  DualSign.py  Dual_sign.py  LMS.py  LMS_Newton.py  NLMS.py  Newton_LMS.py  Power2_Error.py  SignData.py  SignError.py  Tdomain.py  Tdomain_DCT.py  Tdomain_DFT.py  __init__.py
pydaptivefiltering/LatticeRLS/: LRLS_EF.py  LRLS_pos.py  LRLS_pos_ErrorFeedback.py  LRLS_priori.py  NLRLS_pos.py  NRLS_pos.py  __init__.py
pydaptivefiltering/NonlinearFilters/: Bilinear_RLS.py  Complex_Radial_Basis_Function.py  Multilayer_Perceptron.py  Radial_Basis_Function.py  Volterra_LMS.py  Volterra_RLS.py
pydaptivefiltering/QR/: RLS.py  __init__.py
pydaptivefiltering/RLS/: RLS.py  RLS_Alt.py  __init__.py
pydaptivefiltering/SM/: BNLMS.py  (+4 more)
scripts/: gen_examples.py  run_examples_report.py
tests/: conftest.py  test_advanced_lms.py  test_auto_examples_smoke.py  test_fast_rls.py  test_iir_accuracy.py  test_iir_filters.py  test_lattice_rls.py  test_lms_accuracy.py  test_lms_family.py  test_lrls_accuracy.py  test_nonlinear.py  test_nonlinear_acc.py  test_qr_rls.py  test_rls.py  test_rls_accuracy.py  test_robust_and_perform.py  test_sm.py  test_sm_accuracy.py  testa_autodiscovery.py  testa_subband.py  testa_zautodiscovery.py  teste_geral.py
(+203 files in other folders)
