[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydaptivefiltering"
version = "1.0"
description = "A modern Python implementation of the AdaptiveFiltering toolbox."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "Bruno Ramos Lima Netto", email = "brunolimanetto@gmail.com" },
]
keywords = ["Adaptive", "Filtering", "Digital", "Signal", "Processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",  
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.1.0",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]

[project.urls]
"Homepage" = "https://github.com/BruninLima/PydaptiveFiltering"
"Bug Tracker" = "https://github.com/BruninLima/PydaptiveFiltering/issues"
"Source" = "https://github.com/BruninLima/PydaptiveFiltering"

[tool.setuptools]
packages = { find = { include = ["pydaptivefiltering", "pydaptivefiltering.*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.optional-dependencies]
examples = ["matplotlib", "scipy"]
dev = ["pytest"]