#setup.cfg
[metadata]
name             = PydaptiveFiltering
version          = 0.5
description      = A modern Python implementation of the AdaptiveFiltering toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BruninLima/PydaptiveFiltering
project_urls =
    Bug Tracker = https://github.com/BruninLima/PydaptiveFiltering/issues
    Source = https://github.com/BruninLima/PydaptiveFiltering
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

python_requires = >=3.7, <4